<resources>
    <string name="app_name">IsaMed</string>
    <string name="please_fill_up_the_details_to_know_the_test_result_of_the_patient">Please fill up the details to know the test result of the patient.</string>
    <string name="fields_mandatory">*Fields mandatory</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="to">To</string>
    <string name="account_nnumber">Account\nNumber</string>
    <string name="terms_and_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="terms_and_conditions_without_u">Terms &amp; Conditions</string>
    <string name="forgot">Forgot password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="patient_info">Patient Info</string>
    <string name="days_supply_1">Days Supply 1</string>
    <string name="direction">Direction</string>
    <string name="refill">Refill</string>
    <string name="quantity">Quantity</string>
    <string name="dose_type">Dose Type</string>
    <string name="drug">Drug</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="prescription">Prescription</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="lab_result">Lab Result</string>
    <string name="test_name">Test Name</string>
    <string name="colon"> : </string>
    <string name="lipase">LIPASE</string>
    <string name="lab_order">Lab Order</string>
    <string name="_0">$0</string>
    <string name="save">Save</string>
    <string name="r87_610_atyp_squam_cell">R87.610 ATYP SQUAM CELL OF UNDET SIGNFC CYTO SMR CRVX (ASC-US)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_instruction">Forgot your password?\nEnter your email Id and we will send\nyou a new one !</string>
    <string name="terms_conditions_text">All copyright, trade marks, design rights, patents and other intelleactual property rights registered in and on Isanetworks, Inc content belong ta sanetworks, Inc. Isanetworks, Inc reserves all of its rights in lsanetworks, Inc Content and lsanetworks, Inc Online Services. Nothing in the Terms grants you a right orlicense to use any trade mark, design right or copyright owned or nontrolled by Isanetworks, Inc or any other third party except as expressly provided in the Terms.</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="logout_text">Logout</string>
</resources>