<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_testName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_name"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tv_testName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lipase"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_testDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_2sdp"
        android:paddingLeft="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_testName">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test Date"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:id="@+id/tv_testDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="06/27/2013"
            android:fontFamily="@font/helvetica"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/isamed_lightGray"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/ll_testDate"
        />

</androidx.constraintlayout.widget.ConstraintLayout>