<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.SearchForPatientActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_titleFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/isamed_blue"
            android:paddingVertical="@dimen/_10sdp"
            android:weightSum="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:src="@drawable/arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/filter"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/search"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/fields_mandatory"
            android:fontFamily="@font/helvetica"
            android:textColor="@color/isamed_red"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toBottomOf="@id/ll_titleFilter" />

        <LinearLayout
            android:id="@+id/ll_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_warning">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:text="@string/first_name"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/isamed_blue"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="4"
                android:background="@drawable/edit_text_box"
                android:inputType="textCapSentences"
                android:lines="1"
                android:maxLength="20"
                android:fontFamily="@font/helvetica"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/isamed_black"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:weightSum="15"
            app:layout_constraintTop_toBottomOf="@id/ll_firstName">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:text="@string/last_name"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/isamed_blue"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:lines="1"
                android:textSize="@dimen/_12sdp"
                android:maxLength="20"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/isamed_black"
                android:inputType="textCapSentences"
                android:background="@drawable/edit_text_box"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_10sdp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:text="*Optional Fields"
            android:textColor="@color/isamed_red"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/helvetica"
            app:layout_constraintTop_toBottomOf="@id/ll_lastName" />

        <LinearLayout
            android:id="@+id/ll_accountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_optional">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:lines="2"
                android:text="Account\nNumber"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/isamed_blue"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:lines="1"
                android:textSize="@dimen/_12sdp"
                android:maxLength="20"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/isamed_black"
                android:inputType="number"
                android:background="@drawable/edit_text_box"
                android:layout_marginLeft="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_10sdp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_SSN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@id/ll_accountNumber">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="11"
                android:text="SSN"
                android:fontFamily="@font/helvetica"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/isamed_blue"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:lines="1"
                android:textSize="@dimen/_12sdp"
                android:maxLength="20"
                android:fontFamily="@font/helvetica"
                android:textColor="@color/isamed_black"
                android:inputType="textCapSentences"
                android:background="@drawable/edit_text_box"
                android:layout_marginLeft="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_10sdp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>